--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Gunwoo # the main title
+title: Gunwoo.blog # the main title
 
-tagline: 용두사미는 안된다! # it will display as the sub-title
+tagline: 기록하는 습관을 만들자 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   개발자로서 성장과정을 기록해 보려 합니다.
