카테고리 변경

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ comments:
   giscus:
     repo: ggunwoo/ggunwoo.github.io # <gh-username>/<repo>
     repo_id: R_kgDOLvxzZg
-    category: General
+    category: Announcements
     category_id: DIC_kwDOLvxzZs4Ce2BU
     mapping: pathname # optional, default to 'pathname'
     input_position: top # optional, default to 'bottom'
